--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -70,29 +70,47 @@ p {
   }
 }
 
-  footer {
-    margin-top: 45px;
-    padding-top: 5px;
-    border-top: 1px solid $gray-medium-light;
-    color: $gray-light;
-    a {
-      color: $gray;
-      &:hover {
-        color: $gray-darker;
-      }
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $gray-medium-light;
+  color: $gray-light;
+  a {
+    color: $gray;
+    &:hover {
+      color: $gray-darker;
     }
-    small {
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
       float: left;
+      margin-left: 15px;
+    }
+  }
+}
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
     }
     ul {
-      float: right;
-      list-style: none;
+      float: none;
+      padding: 0;
       li {
-        float: left;
-        margin-left: 15px;
+        float: none;
+        margin-left: 0;
       }
     }
   }
+}
+  
   
   .debug_dump {
   clear: both;
@@ -160,4 +178,8 @@ input {
   .form-control {
     color: $state-danger-text;
   }
+}
+
+.dropdown-menu.active {
+  display: block;
 }
